--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,16 +1,17 @@
 {
   "name": "backend-project",
   "version": "1.0.0",
-  "description": "a backend at chai aur code channel - youtube",
+  "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
+  
   },
   "keywords": [
     "javascript",
-    "backend",
-    "chai"
+    "backend"
+    
   ],
   "author": "Suhas G Nayak",
   "license": "ISC",
