done with user controller testing

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Backend code",
+  "name": "backendcode",
   "version": "1.0.0",
   "description": "Just Backend codeBase",
   "type": "module",
