starting with frontend

--- a/Backend/.env.sample
+++ b/Backend/.env.sample
@@ -1,5 +1,5 @@
-PORT=8000
-MONGODB_URI=mongodb+srv://username:password@cluster_Name.8mm3mgs.mongodb.net
+PORT=port
+MONGODB_URI=<MongoDB-URI>
 CORS_ORIGIN=*
 ACCESS_TOKEN_SECRET=chai-aur-code
 ACCESS_TOKEN_EXPIRY=1d
