--- a/Backend/.env.sample
+++ b/Backend/.env.sample
@@ -1,9 +1,9 @@
 PORT=port
 MONGODB_URI=<MongoDB-URI>
 CORS_ORIGIN=*
-ACCESS_TOKEN_SECRET=chai-aur-code
+ACCESS_TOKEN_SECRET=
 ACCESS_TOKEN_EXPIRY=1d
-REFRESH_TOKEN_SECRET=chai-aur-backend
+REFRESH_TOKEN_SECRET=
 REFRESH_TOKEN_EXPIRY=10d
 
 CLOUDINARY_CLOUD_NAME=
